<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Sound Sanctuary Settings">

        <SwitchPreferenceCompat
            android:key="auto_stop_playback"
            android:title="@string/pref_auto_stop_title"
            android:summary="@string/pref_auto_stop_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="playback_behavior"
            android:title="@string/pref_playback_behavior_title"
            android:summary="@string/pref_playback_behavior_summary"
            android:entries="@array/playback_behavior_entries"
            android:entryValues="@array/playback_behavior_values"
            android:defaultValue="auto_pause" />

    </PreferenceCategory>

</PreferenceScreen>
